curreny-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: currency-namespace
spec:
  type: ClusterIP
  selector:
    app: currency-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
