curreny-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-ingress
  namespace: currency-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: currency.pawanlearnaws.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: currency-service
            port:
              number: 80
